-bro finally, switchable gui and everything works

--- a/src/main/resources/assets/easy_tweaker/lang/en_us.json
+++ b/src/main/resources/assets/easy_tweaker/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.easy_tweaker.recipe_manager": "Recipe Manager",
+  "itemGroup.easy_tweaker_tab": "Easy Tweaker",
   "et.button.copy": "Copy recipe",
   "et.button.add": "Add recipe",
   "et.button.reload": "Reload recipes",
